[gd_scene load_steps=16 format=3 uid="uid://43ku0c7m8gqa"]

[ext_resource type="Script" uid="uid://bml0yexgmjr54" path="res://player/player.gd" id="1_g1dw6"]
[ext_resource type="PackedScene" uid="uid://5ays6kuo0xio" path="res://common/shadow.tscn" id="1_rkbax"]
[ext_resource type="Texture2D" uid="uid://bw03btxpkxde4" path="res://player/godot_bottom.png" id="2_g1dw6"]
[ext_resource type="Script" uid="uid://cl3e46fsb17dw" path="res://player/body_sprite.gd" id="4_yw30f"]
[ext_resource type="Script" uid="uid://djmlb8fcjgvng" path="res://player/weapon_pivot.gd" id="5_boad6"]
[ext_resource type="PackedScene" uid="uid://cmcxoh45b2757" path="res://weapons/weapon.tscn" id="5_g6k8r"]
[ext_resource type="Texture2D" uid="uid://dekkcmj408pvt" path="res://player/hand_fire.png" id="6_boad6"]
[ext_resource type="Script" uid="uid://c64c6resoa6ag" path="res://common/health_bar.gd" id="8_rgyib"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yw30f"]
radius = 20.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7em8x"]
bg_color = Color(0.49747366, 0.49747372, 0.49747354, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 3.0
expand_margin_top = 3.0
expand_margin_right = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5bycy"]
bg_color = Color(0.1882353, 0.54509807, 0, 1)
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_qatwx"]
ProgressBar/colors/font_color = Color(0, 0, 0, 1)
ProgressBar/font_sizes/font_size = 16
ProgressBar/styles/background = SubResource("StyleBoxFlat_7em8x")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_5bycy")

[sub_resource type="Animation" id="Animation_hg6s5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodySprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WeaponPivot:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WeaponPivot:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.3351032]
}

[sub_resource type="Animation" id="Animation_rgyib"]
resource_name = "death_animation"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -44), Vector2(-38, 27)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodySprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.7853982, -1.5707964]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WeaponPivot:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(12.999999, -28.999996), Vector2(-6.000001, 27.000004)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WeaponPivot:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.3351032, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8t03j"]
_data = {
&"RESET": SubResource("Animation_hg6s5"),
&"death_animation": SubResource("Animation_rgyib")
}

[node name="Player" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_g1dw6")

[node name="Shadow" parent="." instance=ExtResource("1_rkbax")]

[node name="BodySprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_g1dw6")
script = ExtResource("4_yw30f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 39)
shape = SubResource("CircleShape2D_yw30f")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="WeaponPivot" type="Node2D" parent="."]
unique_name_in_owner = true
rotation = 0.3351032
script = ExtResource("5_boad6")

[node name="WeaponAnchor" type="Marker2D" parent="WeaponPivot"]
position = Vector2(70, 0)

[node name="Weapon" parent="WeaponPivot/WeaponAnchor" instance=ExtResource("5_g6k8r")]
unique_name_in_owner = true
bullet_range = 800.0

[node name="RightHand" type="Sprite2D" parent="WeaponPivot/WeaponAnchor/Weapon"]
texture = ExtResource("6_boad6")
offset = Vector2(0, -30)
flip_v = true

[node name="LeftHand" type="Sprite2D" parent="WeaponPivot/WeaponAnchor/Weapon"]
texture = ExtResource("6_boad6")
offset = Vector2(0, 30)

[node name="HealthBar" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -52.0
offset_top = -137.0
offset_right = -52.0
offset_bottom = -137.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_rgyib")

[node name="ProgressBar" type="ProgressBar" parent="HealthBar"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 100.0
offset_bottom = 29.0
theme = SubResource("Theme_qatwx")
step = 1.0
value = 50.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8t03j")
}
